01-24-2019/Lab-6
// READ THE FILE IN DIFFERENT WAYS:

>>> f=open('/Users/<USER-NAME>/Documents/MyGit/Python/01-24-2019/new-file')
>>> f.open(4)			# error
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: '_io.TextIOWrapper' object has no attribute 'open'
>>> 
>>> f.read(4)
'My F'
>>> f.read(10)
'irst Line\n'
>>> 
>>> f.read()
'My Second Line\n\nThis is my third line\n'
>>> 
>>> f=open('/Users/<USER-NAME>/Documents/MyGit/Python/01-24-2019/new-file'.mode='r')
  File "<stdin>", line 1
SyntaxError: keyword can't be an expression
>>> f=open('/Users/<USER-NAME>/Documents/MyGit/Python/01-24-2019/new-file',mode='r')
>>> f.read(10)
'My First L'
>>> 
>>> f.read()
'ine\nMy Second Line\n\nThis is my third line\n'
>>> 
>>> f=open('/Users/<USER-NAME>/Documents/MyGit/Python/01-24-2019/new-file',mode='r')
>>> f.read()
'My First Line\nMy Second Line\n\nThis is my third line\n'
>>> 
>>> f.read(10)
''
>>> f=open('/Users/<USER-NAME>/Documents/MyGit/Python/01-24-2019/new-file',mode='r')
>>> f.read(4)
'My F'
>>> f.read(4)
'irst'
>>> f.read(4)
' Lin'
>>> 
>>> f.close)(
  File "<stdin>", line 1
    f.close)(
           ^
SyntaxError: invalid syntax
>>> f.close()
>>> 
>>> f.read(4)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: I/O operation on closed file.
>>> 
>>> f=open('/Users/<USER-NAME>/Documents/MyGit/Python/01-24-2019/new-file',mode='r')
>>> f.read(100)
'My First Line\nMy Second Line\n\nThis is my third line\n'
>>> f.read(100)
''
>>> 
